@@ -1,0 +1,68 @@
+<printer id="printer/HP-OfficeJet_4110">
+  <make>HP</make>
+  <model>OfficeJet 4110</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>4800</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>
+        1 colour (CMY) cartridge and 1 black (K) cartridge
+        </en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url></url>
+  <lang>
+    <proprietary /><!--no pjl-->
+  </lang>
+  <autodetect>
+    <general>
+      <ieee1284>MFG:Hewlett-Packard;MDL:officejet 4100 series;CMD:LDL,MLC,PML,DYN;CLS:PRINTER;</ieee1284>
+      <manufacturer>Hewlett-Packard</manufacturer>
+      <model>officejet 4100 series</model>
+      <commandset>LDL,MLC,PML,DYN</commandset>
+    </general>
+  </autodetect>
+  <functionality>B</functionality>
+  <!--no "contrib_url"-->
+  <driver>hpijs</driver>
+  <comments>
+    <en>
+
+    Entry level sheet-fed multi-function
+    device. Printer/scanner/copier/fax.&lt;p&gt;
+
+    Does not understand PCL as most other DeskJets/PSCs/OfficeJets, it
+    uses the so-called &quot;Lightweight Imaging Device Interface
+    Language&quot; (LIDIL), these printers are supported by the
+    &quot;hpijs&quot; driver beginning from version 1.3. The driver
+    supports resolutions only up to 600 dpi, head alignment settings
+    stored in the printer are not made use of, so use a one-cartridge
+    (CMY) printing mode in case of mis-alignments.&lt;p&gt;
+
+    Scanning works using the &lt;a
+    href=&quot;http://hpoj.sourceforge.net/&quot;&gt;HPOJ&lt;/a&gt;
+    low-level driver together with its &lt;a
+    href=&quot;http://panda.mostang.com/sane/&quot;&gt;SANE&lt;/a&gt;
+    backend &quot;hpoj&quot;. However, note that when using the
+    current version (0.9) you can only scan, and when you don&apos;t
+    use HPOJ at all you can only print.  To fix this so you can both
+    print and scan, you MUST install &lt;a
+    href=&quot;http://libusb.sourceforge.net&quot;&gt;libusb&lt;/a&gt;
+    and upgrade to the CVS version of &lt;a
+    href=&quot;http://hpoj.sourceforge.net&quot;&gt;HPOJ&lt;/a&gt;.&lt;p&gt;
+    
+    Copying works fine from the front panel.&lt;p&gt;
+
+    PC-assisted faxing does not work with free software.&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
