@@ -1,3 +1,8 @@
+2003-06-27  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/HP-OfficeJet_4110.xml: Added the HP OfficeJet 4110
+	  multi-function devices.
+
 2003-06-26  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/HP-PSC_2175.xml: Added the HP PSC 2175 multi-function
